--- a/css/sunnyvaleProject.css
+++ b/css/sunnyvaleProject.css
@@ -727,13 +727,368 @@ h5{
     }
     .right{
         font-size: 12px;
-        line-height:none;
-        margin-left: 23px;
+        line-height:23px;
+        margin-left: 21px;
         line-height: 15px;
     }
     .gold{
         padding: 2px;
-        margin-right: 1px;
+        margin-right: 10px;
+        font-size: 13px;
     }
+   .submit{
+    margin-left: 450px;
+   }
+   .arrange >input{
+    font-size: 23px;
+    margin: 0px 20px 25px 20px;
+    padding: 9px;
+   }
+   
+   .boss{
+    margin-right: 140px;
+   }
+   .icons{
+    gap:40px;
+   }
+   .om{
+    font-size: 30px;
+   }
+}
 
+@media screen and (min-width:2560px) {
+    .header{
+        width: 100%;
+        background-color: #493231;
+        display: flex;
+        gap: 30em;
+        position: relative;
+        margin-top: 0;
+    }
+    
+    .b{
+        display: flex;
+        height: 30px;
+        gap: 20px;
+        margin-top: 48.5px;
+    }
+    
+    .btn{
+        background-color: #493231;
+        color: #ffffff;
+        padding: 12px;
+        border: hidden;
+        font-size: 50px;
+    }
+    
+    .btn:hover{
+        border-radius: 10px;
+        box-shadow: 0px 1px 0px   white;
+        transition: 0.25s ease-in;
+    }
+    
+    .dropdown-content{
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        width: 110px;
+        box-shadow: 0px 8px 16px 0px solid #ffffff;
+        z-index: 1;
+        margin-top: 2px;
+        transition: display 0.25s ease-in;
+    }
+    
+    .dropdown-content a{
+        color: #000000;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        margin: 0 auto;
+    }
+    
+    .dropdown-content a:hover{
+        background-color: #3e8e41;
+    }
+    
+    .dropdown:hover .dropdown-content{
+        display: block;
+        
+    }
+    
+    h1,h2{
+        color: #ffffff;
+        font-size: 60px;
+        margin: 0px opx 6px 0px;
+    }
+    
+    .rat{
+        text-indent: 30px;
+        font-size: 60px;
+    }
+    
+    .run,.ru{
+        text-indent: 30px;
+        text-transform: uppercase;
+        font-size: 30px;
+        margin-top: 0px;
+    }
+    
+    h3{
+        text-transform:uppercase ;
+        margin-left: 40px;
+        
+    }
+    
+    .c{
+        margin: 20px 5px 0px 0px;
+    }
+    
+    .btn1{
+        padding: 30px;
+        border-radius: 24px;
+        background-color: #493231;
+        color: #ffffff;
+        font-size: 40px;
+        width: 400px;
+        height: 100px;
+    }
+    
+    .btn1:hover{
+        background-color: #000000;
+        color: aqua;
+        padding: 10px;
+        transition: 0.25s ease-in;
+    }
+    
+    /* Designing the first division of the body */
+    #first-division{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 170px;
+        margin-bottom:  50px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    
+    p{
+        font-weight: 400;
+    }
+    
+    .i{
+        margin-top: 130px;
+        font-size: 40px;
+    }
+    
+    .omo,h3,.om{
+        margin: 0px 10px 10px;
+        font-size: 30px;
+        text-transform: uppercase;
+    
+    }
+    
+    .omo{
+        margin-left: 43px;
+    }
+    
+    /* Designing the second division of the body */
+    
+    #second-division{
+        width: 96%;
+        margin: 0 auto;
+    }
+    
+    .inner-div{
+        display: grid;
+        grid-template-columns: 30% 70%;
+        gap: 40px;
+        margin: 0px 10px 120px 10px;
+    }
+    
+    .image{
+        box-shadow: 5px 5px 30px 5px ;
+        margin-left: 280px;
+    }
+    /* Designing the third division of the body */
+    #third-division{
+        display: grid;
+        grid-template-columns: 70% 30%;
+        height: 138px;
+        margin-top: 120px;
+        margin-bottom: 120px;
+        width: 95%;
+        margin: 0 auto;
+    }
+    /* Designing the fourth division of the body */
+    #fourth-dision{
+        background-color: #ffffff;
+        width: 100%;
+    }
+    
+    .fourth{
+        display: grid;
+        grid-template-columns: 40% 30% 30%;
+        gap: 24px;
+        width: 90%;
+        border-radius: 10px;
+        margin: 0 auto;
+    }
+    
+    .fourth > div{
+        padding: 20px;
+        border: 2px solid #ffffff;
+        background-color: #f3f3f3;
+        border-radius: 10px;
+    }
+    
+    .image-flex{
+        display: flex;
+    }
+    
+    .right{
+        margin-left: 40px;
+        margin-top: 100px;
+    }
+    
+    .yam{
+        width: 200px;
+        margin-top: 60px;
+    }
+    
+    h4{
+        text-transform: uppercase;
+        font-size: 25px;
+    }
+    
+    .gold{
+        background-color: #2C2C2C;
+        color: #ffffff;
+        margin-left: 90px;
+        font-size: 18px;
+    }
+    
+    /* designing the fifth division  */
+    #fifth-division{
+        display: flex;
+        margin-top:130px ;
+        gap:22em ;
+        width: 100%;
+    }
+    
+    .rat1{
+        margin-left: 90px;
+    }
+    
+    .big{
+        margin-bottom: 40px;
+    }
+    
+    /* designing the sixth division */
+    .guy{
+        width: 96%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 80% 20%;
+    }
+    
+    .boss{
+        color: #ffffff;
+        margin-right: 20px;
+        margin-top: 30px;
+    }
+    
+    /* designing the form */
+    #form{
+        background-color:#493231 ;
+        height: 760px;
+    }
+    
+    .ru,.om{
+        font-size: 40px;
+        color: #ffffff;
+        letter-spacing: 2px;
+    }
+    
+    .om{
+        margin-top: 30px;
+    }
+    
+    .ru{
+        margin-left: 40px;
+    }
+    
+    .mine{
+        justify-content: center;
+        text-align: left;
+        background-color:  #3D2929;
+        width: 40%;
+        margin: 0 auto;
+        border-radius:10px ;
+        margin-bottom: 20px;
+    }
+    
+    .arrange{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .arrange >input{
+        font-size: 19px;
+        border-radius: 10px;
+        margin: 0px 20px 25px 20px;
+        background-color: #3D2929;
+        border: 1px groove ;
+        padding: 9px;
+        color: #f2f2f2;
+    }
+    
+    h5{
+        text-align: center;
+        font-size: 25px;
+        color: #ffffff;
+        padding: 50px 0px 0px 0px;
+    }
+    
+    .submit{
+        margin:20px 0px 40px 240px;
+        background-color: #5C3F3D;
+        color: #ffffff;
+        padding: 13px;
+        border-radius: 24px;
+    }
+    
+    .arrow-down{
+        width: 40px;
+        margin: 30px 0px 0px 0px;
+    }
+    
+    /* designing the footer */
+    #footer{
+        height: 180px;
+        border: 1px solid #000000;
+    }
+    
+    .mud{
+        display: grid;
+        grid-template-columns: 70% 30%;
+        margin: 32.5px 10px 0px 10px;
+    }
+    .icons{
+        display: flex;
+        gap: 40px;
+        margin-bottom: 32px;
+    }
+    
+    .fa-brands{
+        font-size: 45px;
+    }
+    
+     .fa-x-twitter{
+        color:#000000;
+    }
+    
+     .fa-whatsapp{
+        color: green;
+    }
 }
