--- a/css/sunnyvaleProject.css
+++ b/css/sunnyvaleProject.css
@@ -845,7 +845,7 @@ h5{
     
     .btn1{
         padding: 30px;
-        border-radius: 24px;
+        border-radius: 48px;
         background-color: #493231;
         color: #ffffff;
         font-size: 40px;
@@ -878,19 +878,19 @@ h5{
     
     .i{
         margin-top: 130px;
-        font-size: 40px;
+        font-size: 90px;
+    }
+    .ii{
+        font-size: 35px;
+    }
+    .gun{
+        width: 2140px;
+        object-fit: fill;
+    }
+    .arrow-down1{
+        width: 100px;
     }
     
-    .omo,h3,.om{
-        margin: 0px 10px 10px;
-        font-size: 30px;
-        text-transform: uppercase;
-    
-    }
-    
-    .omo{
-        margin-left: 43px;
-    }
     
     /* Designing the second division of the body */
     
@@ -909,6 +909,17 @@ h5{
     .image{
         box-shadow: 5px 5px 30px 5px ;
         margin-left: 280px;
+    }
+
+    .omo,h3,.om{
+        margin: 0px 10px 10px;
+        font-size: 30px;
+        text-transform: uppercase;
+    
+    }
+    
+    .omo{
+        margin-left: 43px;
     }
     /* Designing the third division of the body */
     #third-division{
