--- a/css/sunnyvaleProject.css
+++ b/css/sunnyvaleProject.css
@@ -928,6 +928,14 @@ h5{
         font-size: 60px;
         margin-bottom: 40px;
     }
+
+    .goat{
+        font-size: 30px;
+    }
+
+    .run{
+        font-size: 60px;
+    }
     /* Designing the third division of the body */
     #third-division{
         display: grid;
@@ -948,9 +956,11 @@ h5{
         display: grid;
         grid-template-columns: 40% 30% 30%;
         gap: 24px;
-        width: 90%;
+        width: 100%;
         border-radius: 10px;
         margin: 0 auto;
+        margin-top: 150px;
+        padding: 20px;
     }
     
     .fourth > div{
@@ -960,30 +970,37 @@ h5{
         border-radius: 10px;
     }
     
+    .fourth img{
+        width: 400px;
+    }
     .image-flex{
         display: flex;
     }
     
     .right{
-        margin-left: 40px;
+        margin-left: 90px;
         margin-top: 100px;
+        font-size: 30px;
+        line-height: 32px;
     }
     
     .yam{
         width: 200px;
-        margin-top: 60px;
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
     
     h4{
         text-transform: uppercase;
-        font-size: 25px;
+        font-size: 40px;
     }
     
     .gold{
         background-color: #2C2C2C;
         color: #ffffff;
         margin-left: 90px;
-        font-size: 18px;
+        font-size: 35px;
+        padding: 10px;
     }
     
     /* designing the fifth division  */
