--- a/css/sunnyvaleProject.css
+++ b/css/sunnyvaleProject.css
@@ -992,7 +992,7 @@ h5{
     
     h4{
         text-transform: uppercase;
-        font-size: 40px;
+        font-size: 50px;
     }
     
     .gold{
@@ -1007,12 +1007,13 @@ h5{
     #fifth-division{
         display: flex;
         margin-top:130px ;
-        gap:22em ;
+        gap:50em ;
         width: 100%;
     }
     
     .rat1{
         margin-left: 90px;
+        font-size: 60px;
     }
     
     .big{
@@ -1029,18 +1030,19 @@ h5{
     
     .boss{
         color: #ffffff;
-        margin-right: 20px;
+        margin-right: 10px;
         margin-top: 30px;
+        font-size: 25px;
     }
     
     /* designing the form */
     #form{
         background-color:#493231 ;
-        height: 760px;
+        height: 1500px;
     }
     
     .ru,.om{
-        font-size: 40px;
+        font-size: 60px;
         color: #ffffff;
         letter-spacing: 2px;
     }
@@ -1069,28 +1071,29 @@ h5{
     }
     
     .arrange >input{
-        font-size: 19px;
-        border-radius: 10px;
-        margin: 0px 20px 25px 20px;
+        font-size: 45px;
+        border-radius: 60px;
+        margin: 25px 20px 25px 20px;
         background-color: #3D2929;
         border: 1px groove ;
-        padding: 9px;
+        padding: 40px;
         color: #f2f2f2;
     }
     
     h5{
         text-align: center;
-        font-size: 25px;
+        font-size: 45px;
         color: #ffffff;
         padding: 50px 0px 0px 0px;
     }
     
     .submit{
-        margin:20px 0px 40px 240px;
+        margin:20px 0px 40px 380px;
         background-color: #5C3F3D;
         color: #ffffff;
-        padding: 13px;
+        padding: 30px;
         border-radius: 24px;
+        font-size: 30px;
     }
     
     .arrow-down{
@@ -1100,7 +1103,7 @@ h5{
     
     /* designing the footer */
     #footer{
-        height: 180px;
+        height: 230px;
         border: 1px solid #000000;
     }
     
@@ -1109,6 +1112,12 @@ h5{
         grid-template-columns: 70% 30%;
         margin: 32.5px 10px 0px 10px;
     }
+    .mud p{
+        font-size: 30px;
+    }
+    .mud > div{
+        font-size: 30px;
+    }
     .icons{
         display: flex;
         gap: 40px;
@@ -1116,7 +1125,7 @@ h5{
     }
     
     .fa-brands{
-        font-size: 45px;
+        font-size: 90px;
     }
     
      .fa-x-twitter{
