--- a/css/sunnyvaleProject.css
+++ b/css/sunnyvaleProject.css
@@ -586,7 +586,7 @@ h5{
         width: 100%;
         background-color: #493231;
         display: flex;
-        gap: 25em;
+        gap: 29em;
         position: relative;
         margin-top: 0;
     }
@@ -603,6 +603,7 @@ h5{
         color: #ffffff;
         padding: 8px;
         border: hidden;
+        font-size: 18px;
     }
     
     .btn:hover{
@@ -639,9 +640,9 @@ h5{
         
     }
     
-    h1,h2{
+    h1{
         color: #ffffff;
-        font-size: 26px;
+        font-size: 35px;
         margin: 0px opx 6px 0px;
     }
     
@@ -696,7 +697,7 @@ h5{
     .image{
         box-shadow: 5px 5px 30px 5px ;
         margin-left: 280px;
-        width: 600px;
+        width: 750px;
     }
     .gun{
         width: 1200px;
@@ -723,7 +724,7 @@ h5{
     width: 90%;
     border-radius: 10px;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 90px;
 }
 
 .fourth > div{
@@ -779,25 +780,33 @@ h4{
 }
 .big{
     margin-bottom: 40px;
-    /* margin: 180px; */
+    object-fit: fill;
 }
-   .submit{
-    margin-left: 450px;
+.submit{
+    margin-left: 500px;
+   }
+.submit:hover{
+    cursor: pointer;
    }
    .arrange >input{
-    font-size: 23px;
-    margin: 0px 20px 25px 20px;
-    padding: 9px;
+    font-size: 40px;
+    margin: 0px 20px 30px 20px;
+    padding: 10px;
+    border-radius: 30px;
    }
    
    .boss{
     margin-right: 140px;
+    font-size: 17px;
    }
    .icons{
     gap:40px;
    }
    .om{
     font-size: 30px;
+   }
+   #form{
+    height: 800px;
    }
 }
 
@@ -1059,6 +1068,11 @@ h4{
     .rat1{
         margin-left: 90px;
         font-size: 60px;
+    }
+
+    .new{
+        font-size: 25px;
+        margin-left: 20px;
     }
     
     .big{
